--- a/trunk/PureAudio/PureAudio.csproj
+++ b/trunk/PureAudio/PureAudio.csproj
@@ -159,9 +159,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-    <PreBuildEvent>
-    </PreBuildEvent>
+    <PostBuildEvent>$(ProjectDir)PostBuild.bat $(SolutionDir) $(ConfigurationName)</PostBuildEvent>
+    <PreBuildEvent>$(ProjectDir)PreBuild.bat $(SolutionDir) $(ConfigurationName)</PreBuildEvent>
   </PropertyGroup>
 </Project>
