--- a/trunk/PureAudio/PureAudio.csproj
+++ b/trunk/PureAudio/PureAudio.csproj
@@ -84,19 +84,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsioEngine.cs" />
     <Compile Include="AudioRingBuffer.cs" />
-    <Compile Include="BassPlayer1.cs" />
-    <Compile Include="BassPlayer2.cs" />
+    <Compile Include="BassPlayer.cs" />
+    <Compile Include="BassPlayer_CurrentStreamInfo.cs" />
     <Compile Include="ConfigurationForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Asio.cs" />
+    <Compile Include="BassPlayer_DeviceInfo.cs" />
+    <Compile Include="BassPlayer_Command.cs" />
+    <Compile Include="Player_PlayState.cs" />
+    <Compile Include="MixingMatrixHelper.cs" />
+    <Compile Include="OutputDevice.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="Player_WebStreamInfo.cs" />
+    <Compile Include="Structs.cs" />
     <Compile Include="EncodedStreamHelper.cs" />
     <Compile Include="Enums.cs" />
-    <Compile Include="Player2.cs" />
     <Compile Include="ConfigProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Player1.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Visualizations\VisualizationFactory.cs" />
     <Compile Include="Visualizations\WMPVisualizationWindow.cs">
@@ -166,7 +172,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>$(ProjectDir)PostBuild.bat $(SolutionDir) $(ConfigurationName)</PostBuildEvent>
-    <PreBuildEvent>$(ProjectDir)PreBuild.bat $(SolutionDir) $(ConfigurationName)</PreBuildEvent>
+    <PostBuildEvent>"$(ProjectDir)PostBuild.bat" "$(SolutionDir)" $(ConfigurationName)</PostBuildEvent>
+    <PreBuildEvent>"$(ProjectDir)PreBuild.bat" "$(SolutionDir)" $(ConfigurationName)</PreBuildEvent>
   </PropertyGroup>
 </Project>
