--- a/trunk/PureAudio/PureAudio.csproj
+++ b/trunk/PureAudio/PureAudio.csproj
@@ -195,7 +195,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>"$(ProjectDir)PostBuild.bat" "$(SolutionDir)" $(ConfigurationName)</PostBuildEvent>
-    <PreBuildEvent>"$(ProjectDir)PreBuild.bat" "$(SolutionDir)" $(ConfigurationName)</PreBuildEvent>
+    <PostBuildEvent>"$(ProjectDir)PostBuild.bat" "$(SolutionDir)" "$(TargetDir)"</PostBuildEvent>
+    <PreBuildEvent>"$(ProjectDir)PreBuild.bat" "$(SolutionDir)"</PreBuildEvent>
   </PropertyGroup>
 </Project>
